examples/test/testpolicy4721.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4721
  namespace: namespace486
spec:
  podSelector:
    matchLabels:
      key8: value4
      key42: value19
      key22: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value36
          key22: value5
      podSelector:
        matchLabels:
          key25: value49
